--- a/src/pug/sections/_calculate-form-3.pug
+++ b/src/pug/sections/_calculate-form-3.pug
@@ -28,13 +28,254 @@
 			
 			.calculator-search-tabs__content.content-page
 				.acor-container
-					//=========== single block =============
+					//=========== single block1 =============
 					.acor-item
 						input#acor1(type='checkbox' name='acor' )
 						label(for='acor1')
 							.acor-item__num 01
 							.body-3 Приоритетный инвестиционный проект
 							.tag Налоговая
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+
+					//=========== single block2 =============
+					.acor-item
+						input#acor2(type='checkbox' name='acor' )
+						label(for='acor2')
+							.acor-item__num 02
+							.body-3 Льгота по транспортному налогу сельскохозяйственным организациям
+							.tag Налоговая
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+
+					//=========== single block3 =============
+					.acor-item
+						input#acor3(type='checkbox' name='acor' )
+						label(for='acor3')
+							.acor-item__num 03
+							.body-3 Льгота по транспортному налогу в отношении автомобилей, оборудованных для использования газомоторного топлива
+							.tag Налоговая
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+
+					//=========== single block4 =============
+					.acor-item
+						input#acor4(type='checkbox' name='acor' )
+						label(for='acor4')
+							.acor-item__num 04
+							.body-3 Субсидия на создание и (или) модернизацию объектов агропромышленного комплекса
+							.tag Субсидия
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+
+					//=========== single block5 =============
+					.acor-item
+						input#acor5(type='checkbox' name='acor' )
+						label(for='acor5')
+							.acor-item__num 05
+							.body-3 Субсидия субъектам туристской деятельности на возмещение части затрат на организацию чартерных программ, а также на проведение рекламно-информационных туров
+							.tag Субсидия
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+
+					//=========== single block6 =============
+					.acor-item
+						input#acor6(type='checkbox' name='acor' )
+						label(for='acor6')
+							.acor-item__num 06
+							.body-3 Содействие в приведении продукции и (или) производственного процесса в соответствие с обязательными требованиями, предъявляемыми на внешних рынках
+							.tag Субсидия
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+
+					//=========== single block 7=============
+					.acor-item
+						input#acor7(type='checkbox' name='acor' )
+						label(for='acor7')
+							.acor-item__num 07
+							.body-3 Льготное кредитование субъектов МСП (программа 1764)
+							.tag Кредиты и займы
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+
+					//=========== single block 8=============
+					.acor-item
+						input#acor8(type='checkbox' name='acor' )
+						label(for='acor8')
+							.acor-item__num 08
+							.body-3 Предоставление субъектам МСП на долгосрочной основе государственного или муниципального имущества
+							.tag Имущественная
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+					//=========== single block =============
+					.acor-item
+						input#acor9(type='checkbox' name='acor' )
+						label(for='acor9')
+							.acor-item__num 9
+							.body-3 Участие в экспортных семинарах
+							.tag Консультационная
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+					//=========== single block =============
+					.acor-item
+						input#acor10(type='checkbox' name='acor' )
+						label(for='acor10')
+							.acor-item__num 10
+							.body-3 Проведение обучающих программ для субъектов МСП
+							.tag Образовательная
 						.acor-body.fl-block
 							.acor-body__text
 								h4 Размер поддержки:
