--- a/src/pug/sections/_calculate-form-3.pug
+++ b/src/pug/sections/_calculate-form-3.pug
@@ -216,13 +216,12 @@
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
-
 					//=========== single block 8=============
 					.acor-item
 						input#acor8(type='checkbox' name='acor' )
 						label(for='acor8')
 							.acor-item__num 08
-							.body-3 Предоставление субъектам МСП на долгосрочной основе государственного или муниципального имущества
+							.body-3 Предоставление независимых гарантий Корпорации МСП
 							.tag Имущественная
 						.acor-body.fl-block
 							.acor-body__text
@@ -243,13 +242,14 @@
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
-					//=========== single block =============
+					
+					//=========== single block 9=============
 					.acor-item
-						input#acor9(type='checkbox' name='acor' )
+						input#acor8(type='checkbox' name='acor' )
 						label(for='acor9')
-							.acor-item__num 9
-							.body-3 Участие в экспортных семинарах
-							.tag Консультационная
+							.acor-item__num 09
+							.body-3 Предоставление субъектам МСП на долгосрочной основе государственного или муниципального имущества
+							.tag Имущественная
 						.acor-body.fl-block
 							.acor-body__text
 								h4 Размер поддержки:
@@ -274,6 +274,32 @@
 						input#acor10(type='checkbox' name='acor' )
 						label(for='acor10')
 							.acor-item__num 10
+							.body-3 Участие в экспортных семинарах
+							.tag Консультационная
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+					//=========== single block =============
+					.acor-item
+						input#acor11(type='checkbox' name='acor' )
+						label(for='acor11')
+							.acor-item__num 11
 							.body-3 Проведение обучающих программ для субъектов МСП
 							.tag Образовательная
 						.acor-body.fl-block
