--- a/src/pug/sections/_calculate-form-3.pug
+++ b/src/pug/sections/_calculate-form-3.pug
@@ -50,7 +50,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -77,7 +77,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -104,7 +104,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -131,7 +131,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -158,7 +158,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -185,7 +185,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -212,7 +212,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -238,7 +238,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -265,7 +265,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -291,7 +291,7 @@
 								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
 							
 							.acor-body__btn
-								button.btn-outline
+								button.btn-outline(frame-btn="modal-results")
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
@@ -321,3 +321,91 @@
 									span  Подробнее
 									svg.svg-search
 										use(href="./img/spriteSvg.svg#svg-search")
+
+			//========= Модальное окно по клику на кнопку Подробнее ======
+			.modal-frame-wrapper.modal-frame-results(frame-modal="modal-results")
+				.modal-frame
+					//====крестик закрытия модалки ====
+					.icon-close(frame-close)
+					.content-page
+						h3 Приоритетный инвестиционный проект
+						
+						//====== block ====
+						p
+							strong Тип организации
+						p Малое предприятие, Среднее предприятие, Крупное предприятие
+						
+						//====== block ====
+						p
+							strong Максимальный размер
+						p Общая сумма льгот, предоставляемых инвестору, не может превышать сумму инвестиций, направленных на реализацию инвестиционного проекта
+						
+						//====== block ====
+						p #[strong Описание]
+						p Льгота по налогу на прибыль:
+						p Размер льготы при объеме инвестиций более 40 млрд руб. составляет 4,5%Менее 40 млрд руб. - в зависимости от доли выручки от приоритетного проекта в общей выручке компании:от 2 до 10 - 1%.от 11 до 15 - 1,5%от 16 до 20 - 2%от 21 до 30 - 2,25%от 31 до 40 - 2,5%от 41 до 50 - 3%от 51 до 60 - 3,25%от 61 до 70 - 3,5%от 71 до 80 - 4%свыше 80 - 4,5%. Льгота действует до 31.12.2022, далее - в форме инвестиционного налогового вычета.
+
+						p Налог на имущество:
+
+						p С объемом инвестиций менее 40 миллиардов рублей на 5 лет:Не подлежит обложению налогом на имущество организаций имущество, создаваемое, приобретаемое для реализации приоритетного инвестиционного проектаПри модернизации, реконструкции имущества организации (созданного, приобретенного до начала реализации приоритетного инвестиционного проекта), предоставляются налоговые льготы по каждому объекту имущества организации в зависимости от удельного веса стоимости модернизации, реконструкции объекта в его остаточной стоимости:Удельный вес стоимости модернизации в его остаточной стоимости:75-100% - налоговая ставка 0,55%50-74% - налоговая ставка 1,1%25-49% - налоговая ставка 1,65%С объемом инвестиций более 40 миллиардов рублей:срок предоставление льготы ограничен сроком окупаемости инвестиционного проекта с учетом дисконтирования и составляет не более двадцати лет.
+						p Льгота по арендной плате за земельные участки в государственной и муниципальной собственности.
+						p Субсидия до 1/2 ставки ЦБ РФ в целях возмещения затрат на проценты по кредитам.
+						p Субсидия на возмещение затрат на создание инженерной инфраструктуры, в том числе на оплату услуг по технологическому присоединению к электрическим сетям и подключению к сетям инженерно-технического обеспечения, объектов капитального строительства сельскохозяйственных организаций с объемом инвестиций свыше 2,5 млрд.рублей.
+						p Поддержка (направление) ходатайств и обращений в федеральные органы государственной власти Российской Федерации об оказании содействия инвесторам при реализации инвестиционного проекта. Распространение позитивной информации об инвесторе. Помощь в создании инфраструктуры бизнеса.
+
+						//====== block ====
+						p #[strong Требования (к инвестору, оборудованию, иные)]
+						p Организации, осуществляющие реализацию приоритетных инвестиционных проектов на территории Нижегородской области.
+						p Обязательно выполнение одного из двух условий:
+						
+						ul
+							li  инвестиционный проект реализуется в муниципальном районе (городском округе) Нижегородской области, уровень дотационности которого более 5 процентов;
+							li  инвестиционный проект имеет объем инвестиций свыше 100 млн рублей
+
+						//====== block ====
+						p #[strong Для получения поддержки заявителю требуется]
+
+						ol
+							li Субъект инвестиционной деятельности (инвестор), реализующий инвестиционный проект, подает заявку на присвоение проекту статуса приоритетного и комплект документов в министерство экономического развития и инвестиций Нижегородской области.
+							
+							li Министерство проверяет заявку, в случае наличия всех документов регистрирует заявку на сайте Правительства Нижегородской области. Направляет инвестиционный проект на отраслевое заключение и заключение министерства финансов Нижегородской области. С учетом данных заключений министерство проводит комплексную экспертизу. При наличии замечаний направляет данные замечания субъекту инвестиционной деятельности.
+
+							li  Субъект инвестиционной деятельности имеет право доработать инвестиционный проект (бизнес-план проекта) с учетом замечаний и представить его на повторную экспертизу.
+
+							li  При положительных экспертизах Министерство вносит вопрос в повестку заседания Президиума Совета по стратегии и инвестициям.
+
+							li  Субъект инвестиционной деятельности защищает инвестиционный проект на заседании Президиума Совета по стратегии и инвестициям. <br> Субъект инвестиционной деятельности готовит презентацию проекта и выступает с докладом по проекту.
+							
+							li Министерство в случае положительного решения о предоставлении проекту статуса приоритетного инвестиционного проекта Нижегородской области готовит
+								ul
+									li распоряжение о признании проекта приоритетным инвестиционным проектом Нижегородской области.
+									li проект инвестиционного соглашения между Правительством Нижегородской области и субъектом инвестиционной деятельности и направляет его инвестору для подписания в электронном виде и представления в министерство в двух экземплярах. Субъект инвестиционной деятельности должен подписать инвестиционное соглашение со своей стороны и официально направить в министерство.
+									li проект закона об утверждении инвестиционного соглашения и организует процедуру согласования.
+								
+								p Согласованный проект закона вносится в Законодательное Собрание Нижегородской области.
+
+							li Рассмотрение законопроекта в Законодательном Собрании Нижегородской области:
+								ul
+									li  на заседании комитета по экономике, промышленности, развитию предпринимательства, торговли и туризму
+									li на заседании комитета по бюджету и налогам
+									li на заседании Законодательного Собрания Нижегородской области
+
+								p Доклад делает министр экономического развития и инвестиций Нижегородской области либо лицо его замещающее. Демонстрируется презентация.
+								p Субъект инвестиционной деятельности присутствует на всех заседаниях и отвечает на вопросы депутатов в случае необходимости.
+							
+							li Инвестиционное соглашение вступает в действие со дня опубликования Закона. Инвестор может воспользоваться государственной поддержкой.
+
+						//=== block ======
+						p #[strong Куда обратиться для получения подробной консультации]
+						p Министерство экономического развития и инвестиций Нижегородской области
+						p Марычева С.Е., 
+						p 8 (831) 419-54-15
+						p invproekt1@minec.kreml.nnov.ru
+
+						//=== block ======
+						p #[strong Территория]
+						p Площадки brownfield, Площадки greenfield, Промышленные парки, Технопарки
+
+						//=== block ======
+						p #[strong Статус]
+						p Действует и предоставляется
