--- a/src/scss/sections/_calculator-results.scss
+++ b/src/scss/sections/_calculator-results.scss
@@ -108,3 +108,35 @@
 	.acor-container label{padding-bottom: 16px;}
 		
 }
+.modal-frame-results{
+	padding-top: 40px;
+	padding-bottom: 40px;
+	height: 100vh;
+	align-items: flex-start;
+	 .modal-frame{
+	    padding: 40px;
+	}
+	@media (max-width: 767px) {
+		padding-top: 20px;
+		padding-bottom: 20px;
+		.modal-frame {
+				padding: 20px;
+				border-radius: 0;
+			}
+	}
+}
+.modal-frame-results .content-page{
+	h1, h2, h3{margin-bottom: 40px;}
+	h4, h5, h6, strong{font-size: 16px;margin-bottom: 10px; margin-top: 30px;display: block;color: $pr}
+	ul +p, ol+p, p + p, li,
+	p + ul{margin-bottom: 10px;margin-top: 10px;}
+	
+	a{display: block; width: fit-content; margin-top: 10px; margin-bottom: 10px;}
+	ul>li:before{
+		width: 5px;
+		height: 5px;
+		top: 9px;
+		background-color: $sec1;
+	}
+
+}
