--- a/src/scss/sections/_modal.scss
+++ b/src/scss/sections/_modal.scss
@@ -42,12 +42,16 @@
 }	
 .modal-frame{
 	position: relative;
-	
+	width: 95%;
+	max-width: 1350px;
 	border-radius: 20px;
 	border: 1px solid $sec2;
 	background: $sec4;
 	box-shadow: 0px 4px 40px 0px rgba(169, 173, 198, 0.35);
 	padding: 40px 30px;
+	@media (max-width: 767px) {
+	width: 100%;
+	}
 }
 .modal-frame.modal-frame--subscribe{
 	width: 490px;
