--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -15,7 +15,7 @@
 					a(href="#") Льготное финансирование
 
 				li
-					a(href="#") Для институтов развития
+					a(href="#") Для&nbsp;институтов развития
 				li
 					a(href="#") Нефинансовые меры
 				li
