--- a/src/pug/sections/_modal-form.pug
+++ b/src/pug/sections/_modal-form.pug
@@ -1,6 +1,6 @@
-.modal-frame-wrapper(frame-modal="modal-subscribe")
+.modal-frame-wrapper.modal-frame-subscribe(frame-modal="modal-subscribe")
 	
-	.modal-frame.modal-frame--subscribe
+	.modal-frame
 		//====крестик закрытия модалки ====
 		.icon-close(frame-close)
 
