--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -256,6 +256,7 @@
 	padding-top: 40px;
 	padding-bottom: 40px;
 	height: 100vh;
+	overflow: hidden;
 	.modal-frame{
 		width: 95%;
 		max-width: 1350px;
