--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -179,7 +179,7 @@ article{
 	}
 }
 .economy-republic .container, .partnership-block__wrapper,
-.company-presentation .container, .partnership .container, .calculator .container {
+.company-presentation .container, .partnership .container, .calculator .container, .support-measures article>.container {
 	&>*+* {
 		margin-top: 40px;
 	}
