--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -246,7 +246,11 @@ svg{transition: .3s;}
 .svg-icon_5 {
 	width: 34px;
 }
-
+.svg-book{
+	width: 24px;
+	height: 30px;
+	fill: white;
+}
 .svg-right, .svg-left{
 	width: 20px;
 	height: 16px;
