--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,8 @@
 @import "sections/_partnership.scss";
 @import "sections/_calculate.scss";
 @import "sections/_calculator-results.scss";
+@import "sections/_calculator-support.scss";
+
 // @import "sections/.scss";
 // @import "sections/.scss";
 @import "pages/_news.scss/";
