--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -1,3 +1,7 @@
+.calculator{padding-top: 0;}
+.calculate-page__content{
+	padding-bottom: 60px;
+}
 .calculator-form__group{
 	.large-card{
 		min-height: 148px;
