--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -52,6 +52,12 @@
 .title-24{
 	font-size: 24px;
 	line-height: 1.3;
+	@media (max-width: 1599px) {
+		font-size: 22px;
+		}
+	@media (max-width: 1439px) {
+		font-size: 18px;
+	}
 	@media (max-width: 767px) {
 	 font-size: 16px;
 	 line-height: 1.4;
