--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,9 +37,9 @@
 @import "sections/_calculate.scss";
 @import "sections/_calculator-results.scss";
 @import "sections/_calculator-support.scss";
+@import "sections/_contacts.scss";
 
-// @import "sections/.scss";
-// @import "sections/.scss";
+
 @import "pages/_news.scss/";
 @import "pages/_content-page.scss/";
 
