--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -26,6 +26,9 @@ block content
 			
 			a(href="calculate-page.html")
 				span Калькуллятор
+
+			a(href="contacts.html")
+				span Контакты
 				
 block variables
 	-var title = "Page";
