--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -31,7 +31,7 @@ select:-webkit-autofill:focus {
     &.error{color: $er;}
   }
 }
-input{
+input,textarea{
   display: block;
   width: 100%;
   height: 54px;
@@ -47,6 +47,15 @@ input{
       color: $sec1;
     }
  
+}
+.form-item textarea{
+  height: 180px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  resize: none;
+  font-family: inherit;
+  font-size: inherit;
+  outline: none;
 }
 .fake-placeholder + input{padding-top:17px;}
 input.error{border: 1px solid $er;}
