--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -13,9 +13,10 @@ block content
 					.gradient-block__group
 						//==== single block ===
 						.gradient-box.gradient-box--special
+							.gradient-box__icon
+								img(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
 							.gradient-box__content.fly-center
-								.gradient-box__icon.fl-center
-									img(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
+								
 								.gradient-box__text
 									.body-3 Корпорация инвестиционного развития РСО-Алания
 									ul
@@ -29,9 +30,9 @@ block content
 						
 						//==== single block ===
 						.gradient-box.gradient-box--special
+							.gradient-box__icon
+								img(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
 							.gradient-box__content.fly-center
-								.gradient-box__icon.fl-center
-									img(src="./img/icons/golf.webp", width="28" height="28" alt="alt")
 								.gradient-box__text
 									.body-3 Парламент Республики Северная Осетия-Алания
 									ul
