--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -1,6 +1,6 @@
 .contacts
 	.contacts-map
-		script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad1a82fca4d043f1c7b02a8a3db63ec2e0758c82623b0bb9edd7386892cdbc75a&lang=ru_RU&scroll=false' )
+		//- script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad1a82fca4d043f1c7b02a8a3db63ec2e0758c82623b0bb9edd7386892cdbc75a&lang=ru_RU&scroll=false' )
 	section.contacts-content
 		.container
 		
