--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -278,82 +278,88 @@ html(lang="ru")
 							pre.
 								svg.svg-icon_11
 									use(href="./img/spriteSvg.svg#svg-icon_11")
-						//- li
-						//- 	svg.svg-icon_12
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_12")
-						//- 	pre.
-						//- 		svg.svg-icon_12
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_12")
+						li
+							svg.svg-icon_12
+								use(href="../img/spriteSvg.svg#svg-icon_12")
+							pre.
+								svg.svg-icon_12
+									use(href="./img/spriteSvg.svg#svg-icon_12")
 
-						//- li
-						//- 	svg.svg-icon_13
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_13")
-						//- 	pre.
-						//- 		svg.svg-icon_13
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_13")
-						//- li
-						//- 	svg.svg-icon_14
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_14")
-						//- 	pre.
-						//- 		svg.svg-icon_14
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_14")
-						//- li
-						//- 	svg.svg-icon_15
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_15")
-						//- 	pre.
-						//- 		svg.svg-icon_15
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_15")
-						//- li
-						//- 	svg.svg-icon_16
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_16")
-						//- 	pre.
-						//- 		svg.svg-icon_16
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_16")
-						//- li
-						//- 	svg.svg-icon_17
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_17")
-						//- 	pre.
-						//- 		svg.svg-icon_17
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_17")
-						//- li
-						//- 	svg.svg-icon_18
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_18")
-						//- 	pre.
-						//- 		svg.svg-icon_18
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_18")
-						//- li
-						//- 	svg.svg-icon_19
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_19")
-						//- 	pre.
-						//- 		svg.svg-icon_19
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_19")
-						//- li
-						//- 	svg.svg-icon_20
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_20")
-						//- 	pre.
-						//- 		svg.svg-icon_20
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_20")
-						//- li
-						//- 	svg.svg-icon_21
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_21")
-						//- 	pre.
-						//- 		svg.svg-icon_21
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_21")
-						//- li
-						//- 	svg.svg-icon_22
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_22")
-						//- 	pre.
-						//- 		svg.svg-icon_22
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_22")
-						//- li
-						//- 	svg.svg-icon_23
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_23")
-						//- 	pre.
-						//- 		svg.svg-icon_23
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_23")
-						//- li
-						//- 	svg.svg-icon_24
-						//- 		use(href="../img/spriteSvg.svg#svg-icon_24")
-						//- 	pre.
-						//- 		svg.svg-icon_24
-						//- 			use(href="./img/spriteSvg.svg#svg-icon_24")
+						li
+							svg.svg-icon_13
+								use(href="../img/spriteSvg.svg#svg-icon_13")
+							pre.
+								svg.svg-icon_13
+									use(href="./img/spriteSvg.svg#svg-icon_13")
+						li
+							svg.svg-icon_14
+								use(href="../img/spriteSvg.svg#svg-icon_14")
+							pre.
+								svg.svg-icon_14
+									use(href="./img/spriteSvg.svg#svg-icon_14")
+						li
+							svg.svg-icon_15
+								use(href="../img/spriteSvg.svg#svg-icon_15")
+							pre.
+								svg.svg-icon_15
+									use(href="./img/spriteSvg.svg#svg-icon_15")
+						li
+							svg.svg-icon_16
+								use(href="../img/spriteSvg.svg#svg-icon_16")
+							pre.
+								svg.svg-icon_16
+									use(href="./img/spriteSvg.svg#svg-icon_16")
+						li
+							svg.svg-icon_17
+								use(href="../img/spriteSvg.svg#svg-icon_17")
+							pre.
+								svg.svg-icon_17
+									use(href="./img/spriteSvg.svg#svg-icon_17")
+						li
+							svg.svg-icon_18
+								use(href="../img/spriteSvg.svg#svg-icon_18")
+							pre.
+								svg.svg-icon_18
+									use(href="./img/spriteSvg.svg#svg-icon_18")
+						li
+							svg.svg-icon_19
+								use(href="../img/spriteSvg.svg#svg-icon_19")
+							pre.
+								svg.svg-icon_19
+									use(href="./img/spriteSvg.svg#svg-icon_19")
+						li
+							svg.svg-icon_20
+								use(href="../img/spriteSvg.svg#svg-icon_20")
+							pre.
+								svg.svg-icon_20
+									use(href="./img/spriteSvg.svg#svg-icon_20")
+						li
+							svg.svg-icon_21
+								use(href="../img/spriteSvg.svg#svg-icon_21")
+							pre.
+								svg.svg-icon_21
+									use(href="./img/spriteSvg.svg#svg-icon_21")
+						li
+							svg.svg-icon_22
+								use(href="../img/spriteSvg.svg#svg-icon_22")
+							pre.
+								svg.svg-icon_22
+									use(href="./img/spriteSvg.svg#svg-icon_22")
+						li
+							svg.svg-icon_23
+								use(href="../img/spriteSvg.svg#svg-icon_23")
+							pre.
+								svg.svg-icon_23
+									use(href="./img/spriteSvg.svg#svg-icon_23")
+						li
+							svg.svg-icon_24
+								use(href="../img/spriteSvg.svg#svg-icon_24")
+							pre.
+								svg.svg-icon_24
+									use(href="./img/spriteSvg.svg#svg-icon_24")
+						li
+							svg.svg-icon_25
+								use(href="../img/spriteSvg.svg#svg-icon_25")
+							pre.
+								svg.svg-icon_25
+									use(href="./img/spriteSvg.svg#svg-icon_25")
