--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -239,13 +239,14 @@ svg{transition: .3s;}
 [class^="svg-icon_"]{
 	fill:#767DA2;
 	width: 39px;
-	height: 34px;
+	height: 39px;
 }
-.svg-icon_2,.svg-icon_8{height: 34px;}
+// .svg-icon_2,.svg-icon_8{height: 34px;}
 .svg-icon_11,
-.svg-icon_5 {
+.svg-icon_5,.svg-icon_12, .svg-icon_21 {
 	width: 34px;
 }
+.svg-icon_25{height: 31px;}
 .svg-book{
 	width: 24px;
 	height: 30px;
