--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -364,6 +364,7 @@ article{
 	position: fixed;
 	left: 500px;
 	bottom: 40px;
+	z-index: 10;
 	&:hover{opacity: .8;}
 	@media (max-width: 1919px) {
 		bottom: 20px;
