--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,6 +11,9 @@ block content
 				
 			a(href="news.html")
 				span Новости и события
+
+			a(href="news-video.html")
+				span Видео в шапке
 			
 			a(href="content-page.html")
 				span Content page
