--- a/src/scss/sections/_header-inner.scss
+++ b/src/scss/sections/_header-inner.scss
@@ -46,3 +46,16 @@
 	}
 	
 }
+.video-bg{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: -1;
+	video{
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
