--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -33,7 +33,7 @@
 		
 		line-height: 1.4;
 		.txt-semi{margin-bottom: 10px; color: $pr;}
-		.txt-clamp{margin-bottom: 10px; height: 67px;
+		.txt-clamp{margin-bottom: 10px; height: 63px; font-size: 14px;
 			@media (max-width: 767px) {
 			//   width: 320px;
 			}
