--- a/src/scss/sections/_fotorama.scss
+++ b/src/scss/sections/_fotorama.scss
@@ -11,6 +11,7 @@
 			height: 100%!important;
 			object-fit: cover;
 			border-radius: 20px;
+			top:0!important;
 		}
 	}
 	.fotorama__thumb-border{
